tests/ui/unsync_reads_sized_cache.stderr
error: `unsync_reads` requires a store that implements `CachedRead` (reads take a shared lock, so they must not mutate the store). `LruCache`, `LruTtlCache`, and `TtlCache` do not implement `CachedRead` (their reads update LRU recency or TTL bookkeeping). Use the default store (`UnboundCache`), `TtlSortedCache`, or a custom `ty` that implements `CachedRead`.
 --> tests/ui/unsync_reads_sized_cache.rs:4:4
  |
4 | fn my_fn(k: i32) -> i32 {
  |    ^^^^^
